--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ele",
+  "name": "elm",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "liping123456 <627036123@qq.com>",
+  "author": "594741liutao <470180842@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --open --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
@@ -23,9 +23,9 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "ccnper": "^0.28.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
